<resources>
    <string name="app_name">MoneyQuiz</string>
    <string name="please_wait">Please wait..</string>
    <string name="no_internet">No internet</string>
    <string name="back_again_to_exit">Back Again for exit</string>
    <string name="settings">Settings</string>
    <string name="title_activity_debug_screen">DebugScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ctn_btn">Continue</string>
    <string name="environment_url">Environment URL</string>
    <string name="et_url_hint">Enter base URL(e.g. http://www.xyz.co.in/)</string>
    <string name="select_environment">Select Environment</string>
    <string name="debug_screen">Debug Screen</string>
    <string name="ok">OK</string>
    <string name="invalid_url_alert">Enter valid url</string>

</resources>